fix spacing in footer

--- a/styles/legacy.less
+++ b/styles/legacy.less
@@ -429,6 +429,9 @@ body {
   .c-YearBadge {
     left: calc(~'var(--year-badge-width) / 2');
   }
+  & > .o-Flex:first-child {
+    margin-bottom: calc(~'2 * var(--vru)');
+  }
 }
 
 
